update invoice and user
