# src/routers/user.routes.js
@@ -9,5 +9,7 @@ const {
 
 router.get("/", authenticate, authorizeAdmin, UserController.getAllUser);
 router.get("/profile", authenticate, UserController.getProfile);
+router.get("/profile/:id", authenticate, authorizeAdmin, UserController.getUserById);
+router.delete("/:id", authenticate, authorizeAdmin, UserController.deleteUser);
 
 module.exports = router;
